# ship-log

./: .gitignore  AGENT.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: README.md  demo.sh  shiplog.cast
shiplog/: __init__.py  __main__.py  ask.py  blame.py  brief.py  cli.py  config.py  export.py  filters.py  gitctx.py  guard.py  hooks.py  links.py  mcp.py  merge.py  models.py  render.py  resolutions.py  stats.py  store.py  tui.py  tui_app.py  verify.py  watch.py  why.py
tests/: test_ask.py  test_blame.py  test_brief.py  test_cli.py  test_config.py  test_export.py  test_filters.py  test_guard.py  test_hooks.py  test_html_export.py  test_init_add.py  test_link.py  test_links_unit.py  test_ls_show.py  test_mcp.py  test_merge.py  test_merge_unit.py  test_resolve.py  test_stats.py  test_store.py  test_tui.py  test_verify.py  test_watch.py  test_why.py
