[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ship-log"
version = "0.1.0"
description = "A git-native captain's log for the multi-agent era — append-only decision/dead-end ledger living inside your repo."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "rwrife" }]
keywords = ["cli", "git", "agents", "decision-log", "adr", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/rwrife/ship-log"
Repository = "https://github.com/rwrife/ship-log"
Issues = "https://github.com/rwrife/ship-log/issues"

[project.scripts]
shiplog = "shiplog.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["shiplog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
